add contact and last updat

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <h1>Privacy Policy</h1>
-    <p><em>Last updated: [insert last updated date]</em></p>
+    <p><em>Last updated: [11/07/2024]</em></p>
 
     <p>
       SIPPRA JABAR is an application designed to provide information and
@@ -97,7 +97,7 @@
     <h2>Contact Us</h2>
     <p>
       If you have any questions about our privacy policy or the use of your
-      data, please contact us at [email address or contact number].
+      data, please contact us at blis.pena@gmail.com .
     </p>
   </body>
 </html>
