fix privacy policy

--- a/index.html
+++ b/index.html
@@ -1,136 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-        h2 {
-            color: #333;
-            border-bottom: 1px solid #ccc;
-            padding-bottom: 5px;
-        }
-        p {
-            margin-bottom: 10px;
-        }
-        ul {
-            margin-bottom: 10px;
-            padding-left: 20px;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        margin: 20px;
+      }
+      h2 {
+        color: #333;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 5px;
+      }
+      p {
+        margin-bottom: 10px;
+      }
+      ul {
+        margin-bottom: 10px;
+        padding-left: 20px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Privacy Policy</h2>
 
     <p><strong>Last updated: [16/07/2024]</strong></p>
 
-    <p><strong>SIPPRA JABAR</strong> is an application designed to provide information and administrative services to Raudhatul Athfal educational institutions in West Java. We value your privacy and are committed to protecting your personal information. This privacy policy outlines how we collect, use, and protect the information you provide when using our application.</p>
+    <p>
+      <strong>SIPPRA JABAR</strong> is an application designed to provide
+      information and administrative services to Raudhatul Athfal educational
+      institutions in West Java. We value your privacy and are committed to
+      protecting your personal information. This privacy policy outlines how we
+      collect, use, and protect the information you provide when using our
+      application.
+    </p>
 
     <h3>Information We Collect</h3>
     <ul>
-        <li><strong>Identity Information:</strong> Name, email address, phone number, and other identifying information you provide when using forms such as PPDB or for administrative purposes.</li>
-        <li><strong>Academic Information:</strong> Information about teachers, assignments, reports, and achievements from Raudhatul Athfal educational institutions.</li>
-        <li><strong>Location Information:</strong> To provide location-based services such as information about activities or organizational structures of RA, the application may access user location information while the application is in use.</li>
-        <li><strong>Other User Information:</strong> Additional information necessary to provide extracurricular services, library services, and others as per the application's features.</li>
+      <li>
+        <strong>Identity Information:</strong> Name, email address, phone
+        number, and other identifying information you provide when using forms
+        such as PPDB or for administrative purposes.
+      </li>
+      <li>
+        <strong>Academic Information:</strong> Information about teachers,
+        assignments, reports, and achievements from Raudhatul Athfal educational
+        institutions.
+      </li>
+      <li>
+        <strong>Location Information:</strong> To provide location-based
+        services such as information about activities or organizational
+        structures of RA, the application may access user location information
+        while the application is in use.
+      </li>
+      <li>
+        <strong>Other User Information:</strong> Additional information
+        necessary to provide extracurricular services, library services, and
+        others as per the application's features.
+      </li>
     </ul>
 
     <h3>How We Use Your Information</h3>
     <p>The information we collect is used to:</p>
     <ul>
-        <li>Provide and manage the services you request, including information about activities, profiles, galleries, organizational structures, achievements, and academic information.</li>
-        <li>Process PPDB forms and other administrative services.</li>
-        <li>Understand and improve user experience in using our application.</li>
+      <li>
+        Provide and manage the services you request, including information about
+        activities, profiles, galleries, organizational structures,
+        achievements, and academic information.
+      </li>
+      <li>Process PPDB forms and other administrative services.</li>
+      <li>Understand and improve user experience in using our application.</li>
     </ul>
 
     <h3>Location Information Usage</h3>
     <ul>
-        <li>The application only accesses location information while it is in use to determine the direction of the Qibla for the prayer compass feature.</li>
-        <li>The application does not access or collect location information in the background.</li>
+      <li>
+        The application only accesses location information while it is in use to
+        determine the direction of the Qibla for the prayer compass feature.
+      </li>
+      <li>
+        The application does not access or collect location information in the
+        background.
+      </li>
     </ul>
 
     <h3>Data Protection</h3>
-    <p>We maintain the security of your personal data by implementing appropriate technical and administrative measures to protect information from unauthorized access or use.</p>
+    <p>
+      We maintain the security of your personal data by implementing appropriate
+      technical and administrative measures to protect information from
+      unauthorized access or use.
+    </p>
 
     <h3>Sharing Information with Third Parties</h3>
-    <p>We will not sell, rent, or trade your personal information with third parties unless necessary for the purposes outlined above or required by law.</p>
+    <p>
+      We will not sell, rent, or trade your personal information with third
+      parties unless necessary for the purposes outlined above or required by
+      law.
+    </p>
 
     <h3>Privacy Settings</h3>
-    <p>You can manage your privacy settings and grant or deny the application access to collect certain information such as location through your device or application settings.</p>
+    <p>
+      You can manage your privacy settings and grant or deny the application
+      access to collect certain information such as location through your device
+      or application settings.
+    </p>
 
     <h3>Contact Us</h3>
-    <p>If you have any questions about our privacy policy or the use of your data, please contact us at <strong>blis.pena@gmail.com</strong>.</p>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-        h2 {
-            color: #333;
-            border-bottom: 1px solid #ccc;
-            padding-bottom: 5px;
-        }
-        p {
-            margin-bottom: 10px;
-        }
-        ul {
-            margin-bottom: 10px;
-            padding-left: 20px;
-        }
-    </style>
-</head>
-<body>
-    <h2>Privacy Policy</h2>
-
-    <p><strong>Last updated: [11/07/2024]</strong></p>
-
-    <p><strong>SIPPRA JABAR</strong> is an application designed to provide information and administrative services to Raudhatul Athfal educational institutions in West Java. We value your privacy and are committed to protecting your personal information. This privacy policy outlines how we collect, use, and protect the information you provide when using our application.</p>
-
-    <h3>Information We Collect</h3>
-    <ul>
-        <li><strong>Identity Information:</strong> Name, email address, phone number, and other identifying information you provide when using forms such as PPDB or for administrative purposes.</li>
-        <li><strong>Academic Information:</strong> Information about teachers, assignments, reports, and achievements from Raudhatul Athfal educational institutions.</li>
-        <li><strong>Location Information:</strong> To provide location-based services such as information about activities or organizational structures of RA, the application may access user location information while the application is in use.</li>
-        <li><strong>Other User Information:</strong> Additional information necessary to provide extracurricular services, library services, and others as per the application's features.</li>
-    </ul>
-
-    <h3>How We Use Your Information</h3>
-    <p>The information we collect is used to:</p>
-    <ul>
-        <li>Provide and manage the services you request, including information about activities, profiles, galleries, organizational structures, achievements, and academic information.</li>
-        <li>Process PPDB forms and other administrative services.</li>
-        <li>Understand and improve user experience in using our application.</li>
-    </ul>
-
-    <h3>Location Information Usage</h3>
-    <ul>
-        <li>The application only accesses location information while it is in use to determine the direction of the Qibla for the prayer compass feature.</li>
-        <li>The application does not access or collect location information in the background.</li>
-    </ul>
-
-    <h3>Data Protection</h3>
-    <p>We maintain the security of your personal data by implementing appropriate technical and administrative measures to protect information from unauthorized access or use.</p>
-
-    <h3>Sharing Information with Third Parties</h3>
-    <p>We will not sell, rent, or trade your personal information with third parties unless necessary for the purposes outlined above or required by law.</p>
-
-    <h3>Privacy Settings</h3>
-    <p>You can manage your privacy settings and grant or deny the application access to collect certain information such as location through your device or application settings.</p>
-
-    <h3>Contact Us</h3>
-    <p>If you have any questions about our privacy policy or the use of your data, please contact us at <strong>blis.pena@gmail.com</strong>.</p>
-</body>
+    <p>
+      If you have any questions about our privacy policy or the use of your
+      data, please contact us at <strong>blis.pena@gmail.com</strong>.
+    </p>
+  </body>
 </html>
